# vulkan-playground

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
internal/: CMakeLists.txt
internal/engine/: CMakeLists.txt  camera.cpp  camera.hpp  transform.cpp  transform.hpp  uniform.hpp  vertex.hpp  vertex_desc.hpp
internal/graphics/: CMakeLists.txt  buffer.cpp  buffer.hpp  context.cpp  context.hpp  device.cpp  device.hpp  image.cpp  image.hpp  instance.cpp  instance.hpp  pipeline.cpp  pipeline.hpp  render_pass.cpp  render_pass.hpp  renderpass.cpp  renderpass.hpp  surface.cpp  surface.hpp  swapchain.cpp  swapchain.hpp
internal/renderer/: CMakeLists.txt  mesh.cpp  mesh.hpp  render_state.cpp  render_state.hpp  renderer.cpp  renderer.hpp  renderstate.cpp  renderstate.hpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp
internal/wsi/: CMakeLists.txt  window.cpp  window.hpp
shaders/: phong.frag  phong.vert  triangle.frag  triangle.vert  unlit.vert
src/: CMakeLists.txt  main.cpp
src/client/: CMakeLists.txt  application.cpp  application.hpp  time_manager.hpp
